--- a/src/main/resources/i18n_de.properties
+++ b/src/main/resources/i18n_de.properties
@@ -13,3 +13,7 @@ item=Gegenstand
 price=Preis
 newsletter=Beziehen Sie einen Newsletter
 wrongusername=Falscher Benutzername
+firstname=Vorname
+lastname=Nachname
+birthdate=Geburtsdatum
+sex=Geschlecht
