--- a/src/main/resources/i18n_en.properties
+++ b/src/main/resources/i18n_en.properties
@@ -13,3 +13,7 @@ item=Item
 price=Price
 newsletter=For a newsletter enter your email address
 wrongusername=Wrong username
+firstname=Firstname
+lastname=Lastname
+birthdate=Birthdate
+sex=Sex
