register.xhtml proberties

--- a/src/main/resources/i18n_de.properties
+++ b/src/main/resources/i18n_de.properties
@@ -17,3 +17,8 @@ firstname=Vorname
 lastname=Nachname
 birthdate=Geburtsdatum
 sex=Geschlecht
+registerOrder=Bitte f\u00fcllen Sie das Formular vollst\u00e4ndig aus.
+registerText=Registrierung
+register=registrieren
+personalData=personenbezogene Daten
+loginData="Logindaten"
