--- a/src/main/resources/i18n_en.properties
+++ b/src/main/resources/i18n_en.properties
@@ -17,3 +17,8 @@ firstname=Firstname
 lastname=Lastname
 birthdate=Birthdate
 sex=Sex
+registerOrder=Please fill in the form.
+registerText=Registrierung
+register=register
+personalData=Personal Data
+loginData=Login Data
