--- a/src/main/resources/i18n_de.properties
+++ b/src/main/resources/i18n_de.properties
@@ -23,4 +23,4 @@ registerOrder=Bitte f\u00fcllen Sie das Formular vollst\u00e4ndig aus.
 registerText=Registrierung
 register=Registrieren
 personalData=personenbezogene Daten
-loginData="Logindaten"
+loginData=Logindaten
