table.xhtml Internationalisierung

--- a/src/main/resources/i18n_de.properties
+++ b/src/main/resources/i18n_de.properties
@@ -24,3 +24,17 @@ registerText=Registrierung
 register=Registrieren
 personalData=personenbezogene Daten
 loginData=Logindaten
+newGame=Neues Spiel
+logout=Ausloggen
+gameInfo=Spielinformationen
+leader=F\u00fchrender
+round=Runde
+time=Zeit
+roll=W\u00fcrfelergebnis
+player=Spieler
+track=Spielbereich
+start=Startfeld
+field=Feld
+finish=Zielfeld
+diceArea=W\u00fcrfelbereich
+turn=An der Reihe ist
