--- a/src/main/resources/i18n_en.properties
+++ b/src/main/resources/i18n_en.properties
@@ -24,3 +24,17 @@ registerText=Registrierung
 register=Register
 personalData=Personal Data
 loginData=Login Data
+newGame=New Game
+logout=Logout
+gameInfo=Game Information
+leader=Leader
+round=Round
+time=Time
+roll=Dice Roll
+player=Player
+track=Playing Field
+start=Start
+field=Field
+finish=Finish
+diceArea=Dice Area
+turn=currently playing is
