--- a/src/main/resources/i18n_en.properties
+++ b/src/main/resources/i18n_en.properties
@@ -24,7 +24,7 @@ registerText=Registrierung
 register=Register
 personalData=Personal Data
 loginData=Login Data
-slogout=Logout
+logout=Logout
 newgame=new game
 gameInfo=Game Information
 leader=Leader
