--- a/src/main/resources/i18n_de.properties
+++ b/src/main/resources/i18n_de.properties
@@ -40,3 +40,5 @@ diceArea=W\u00fcrfelbereich
 turn=An der Reihe ist
 diceDesc=W\u00fcrfel mit einer
 multiple=mehrere
+terms=Ich akzeptiere die AGB
+noterms=Du musst die AGB akzeptieren!
