--- a/src/main/resources/i18n_en.properties
+++ b/src/main/resources/i18n_en.properties
@@ -25,7 +25,7 @@ register=Register
 personalData=Personal Data
 loginData=Login Data
 logout=Logout
-newgame=new game
+newgame=New game
 gameInfo=Game Information
 leader=Leader
 round=Round
@@ -40,3 +40,5 @@ diceArea=Dice Area
 turn=currently playing is
 diceDesc=Dice with a
 multiple=multiple
+terms=You must accept terms and conditions
+noterms=You must accept terms and conditions!
